set(SRCS
    any_ptr.cc
    cabstracthistogram.cc
    carray.cc
    cboolparimpl.cc
    ccanvas.cc
    cchannel.cc
    cclassdescriptor.cc
    ccommbuffer.cc
    ccomponent.cc
    ccomponenttype.cc
    cconfigoption.cc
    cconfiguration.cc
    cconfigurationreader.cc
    ccontextswitcher.cc
    ccoroutine.cc
    cdataratechannel.cc
    cdelaychannel.cc
    cdisplaystring.cc
    cdoubleparimpl.cc
    cdynamicexpression.cc
    cenum.cc
    cenvir.cc
    cevent.cc
    ceventheap.cc
    ceventlooprunner.cc
    cexception.cc
    cexpression.cc
    cfingerprint.cc
    cfsm.cc
    cfutureeventset.cc
    cgate.cc
    chasher.cc
    chistogram.cc
    chistogramstrategy.cc
    cintparimpl.cc
    cksplit.cc
    clcg32.cc
    clifecyclelistener.cc
    clistener.cc
    clog.cc
    cmatchexpression.cc
    cmersennetwister.cc
    cmessage.cc
    cmessageprinter.cc
    cmodule.cc
    cmsgpar.cc
    cnamedobject.cc
    cnedfunction.cc
    cnedmathfunction.cc
    cnullenvir.cc
    cobject.cc
    cobjectfactory.cc
    cobjectparimpl.cc
    cosgcanvas.cc
    coutvector.cc
    cownedobject.cc
    cpacket.cc
    cpacketqueue.cc
    cpar.cc
    cparimpl.cc
    cparsimcomm.cc
    cpatternmatcher.cc
    cprecolldensityest.cc
    cproperties.cc
    cproperty.cc
    cpsquare.cc
    cqueue.cc
    crandom.cc
    cregistrationlist.cc
    cresultfilter.cc
    cresultlistener.cc
    cresultrecorder.cc
    crngmanager.cc
    cscheduler.cc
    csimplemodule.cc
    csimulation.cc
    csoftowner.cc
    cstatisticbuilder.cc
    cstatistic.cc
    cstddev.cc
    cstlwatch.cc
    cstringparimpl.cc
    cstringtokenizer.cc
    ctemporaryowner.cc
    ctimestampedvalue.cc
    ctopology.cc
    cvaluearray.cc
    cvalue.cc
    cvaluecontainer.cc
    cvalueholder.cc
    cvaluemap.cc
    cvisitor.cc
    cwatch.cc
    cxmlelement.cc
    cxmlparimpl.cc
    distrib.cc
    envirext.cc
    errmsg.cc
    expressionfilter.cc
    gettime.cc
    globals.cc
    minixpath.cc
    nedfunctions.cc
    nedpythonfunctions.cc
    nedsupport.cc
    onstartup.cc
    opp_pooledstring.cc
    pythonutil.cc
    resultfilters.cc
    resultrecorders.cc
    simtime.cc
    simtimemath.cc
    statisticrecorderparser.cc
    statisticsourceparser.cc
    stopwatch.cc
    stringutil.cc
    task.cc
    util.cc
)

add_library(oppsim ${SRCS})
target_link_libraries(oppsim oppnedxml oppcommon)
